# idris-scheme

./: .gitignore  Makefile  README.md  idris  idris-scheme.cabal  rts.scm  stack.yaml
examples/: hello.idr  pythag.idr
src/: Main.hs
src/IRTS/: CodegenScheme.hs  SchemeRTS.hs
src/Util/: PrettyPrint.hs
